[gd_scene load_steps=6 format=3 uid="uid://df13g2im2tb7f"]

[ext_resource type="PackedScene" uid="uid://c3vjdnud777ry" path="res://Game/Cup/Water/WaterSpring.tscn" id="2_2e2mm"]
[ext_resource type="Script" path="res://Game/Cup/Water/Water.gd" id="2_divnn"]
[ext_resource type="PackedScene" uid="uid://bd665dkcond6p" path="res://Game/Cup/Water/SplashParticles.tscn" id="3_bbq7x"]
[ext_resource type="Script" path="res://Game/Cup/Water/SmoothPath.gd" id="3_gyycj"]

[sub_resource type="Curve2D" id="1"]

[node name="Water" type="Node2D"]
script = ExtResource("2_divnn")
impact_factor = 25.0
WaterSpring = ExtResource("2_2e2mm")
SplashParticle = ExtResource("3_bbq7x")

[node name="WaterPolygon" type="Polygon2D" parent="."]

[node name="WaterBorder" type="Path2D" parent="."]
curve = SubResource("1")
script = ExtResource("3_gyycj")
_smooth = true

[node name="WaterBodyArea" type="Area2D" parent="."]
gravity = 326.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterBodyArea"]

[connection signal="body_entered" from="WaterBodyArea" to="." method="_on_water_body_area_body_entered"]
[connection signal="body_exited" from="WaterBodyArea" to="." method="_on_water_body_area_body_exited"]
